--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           sarif_file: tfsec.sarif
 
+      - name: Run tfsec with sarif upload
+        uses: aquasecurity/tfsec-sarif-action@v0.0.6
+
+
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
         with:
