--- a/.github/workflows/tfsec.yml
+++ b/.github/workflows/tfsec.yml
@@ -1,25 +1,15 @@
-name: tfsec
+name: tfsec-pr-commenter
 on:
-  push:
-    branches:
-      - main
   pull_request:
 jobs:
   tfsec:
-    name: tfsec sarif report
+    name: tfsec PR commenter
     runs-on: ubuntu-latest
 
     steps:
       - name: Clone repo
         uses: actions/checkout@master
-
       - name: tfsec
-        uses: tfsec/tfsec-sarif-action@v0.0.6
+        uses: aquasecurity/tfsec-pr-commenter-action@v1.0.2
         with:
-          sarif_file: tfsec.sarif
-
-      - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v1
-        with:
-          # Path to SARIF file relative to the root of the repository
-          sarif_file: tfsec.sarif
+          github_token: ${{ github.token }}
